feat-api: rota para buscar o usuário por telefone
